--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row" id="personal">
             <div class="col-md-4">
-                <div class="div-kep rounded-circle"></div>
+                <div class="div-kep rounded-circle" id="profile-pic"></div>
             </div>
             <div class="col-md-8">
                 <h1>cyri0</h1>
@@ -24,14 +24,28 @@
                     <strong>0</strong><span> követés</span>
                 </div>
                 <div id="bio">
-                    
+                    IT teacher from Debrecen
                 </div>
             </div>
         </div>
         <hr>
-        <div class="row" id="posts"></div>
+        <div class="row" id="posts">
+            
+            <div class="col-12 col-sm-6 col-md-4">
+                <div class="div-kep roka"></div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4">
+                <div class="div-kep roka"></div>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4">
+                <div class="div-kep roka"></div>
+            </div>
+
+        </div>
     </div>
 
-
+    <script src="roka.js"></script>
   </body>
 </html>
